enabled native access to silence warning regarding testing bouncy castle